fix alignment issues in shows

--- a/app/styles/solutions.css
+++ b/app/styles/solutions.css
@@ -31,7 +31,7 @@ font-weight: bolder;
 }
 
 
-.container{
+#solutionsContainer{
 	margin-left: 0;
 	margin-right: 0;
 }
